# parallel_programming

./: CMakeLists.txt  README.md  final_runner.ipynb  main.cpp  main.cu
apps/: extract_features.cpp  inference.cpp  train.cpp  train_cpu.cpp  train_gpu.cpp  train_gpu_naive.cpp  train_gpu_opt_v1.cpp  train_gpu_opt_v2.cpp  visualize.cpp  visualize_export.cpp
include/core/: Allocator.h  CheckError.h  Config.h  Device.h  Ops.h  Storage.h  Tensor.h
include/dataloader/: CifarDataLoader.h
include/layers/: Conv2D.h  Conv2s_relu.h  Dense.h  ILayer.h  MaxPool2D.h  ReLU.h  Sigmoid.h  Upsample.h
include/loss/: MSELoss.h
include/models/: Autoencoder.h  Autoencoder_v2.h
include/optim/: SGD.h
include/utils/: Serializer.h
src/CPU/core/: Allocator.cpp  Tensor.cpp
src/CPU/layers/: Conv2D.cpp  MaxPool2D.cpp  ReLU.cpp  Sigmoid.cpp  Upsample.cpp
src/CPU/loss/: MSELoss.cpp
src/CPU/optim/: SGD.cpp
src/GPU_naive/layers/: Conv2D.cu  MaxPool2D.cu  ReLU.cu  Sigmoid.cu  Upsample.cu
src/GPU_naive/loss/: MSELoss.cu
src/GPU_opt_v1/core/: Allocator.cpp
src/GPU_opt_v1/layers/: Conv2D.cu  Conv2D_relu.cu  MaxPool2D.cu  ReLU.cu  Sigmoid.cu  Upsample.cu
src/GPU_opt_v1/optim/: SGD.cu
src/GPU_opt_v2/core/: Tensor.cu
src/GPU_opt_v2/layers/: Conv2D.cu  Conv2D_relu.cu  MaxPool2D.cu  ReLU.cu  Sigmoid.cu  Upsample.cu
src/GPU_opt_v2/loss/: MSELoss.cu
src/GPU_opt_v2_cublas/kernels/: im2col.cu
src/GPU_opt_v3/core/: Allocator.cpp
src/GPU_opt_v3/layers/: Conv2D.cu
src/backend/cpu/: ops_cpu.cpp
src/backend/cuda/: ops_bridge.cu
src/backend/cuda/kernels/naive/: Activation.cu  Conv2D.cu  ElementWise.cu  Loss_Optimizer.cu  NaiveOps.cuh  Pooling.cu  Upsample.cu
src/core/: Allocator.cpp  Config.cpp  Storage.cpp  Tensor.cpp
src/layers/: Conv2D.cpp  Dense.cpp  MaxPool2D.cpp  ReLU.cpp  Sigmoid.cpp  Upsample.cpp
src/loss/: MSELoss.cpp
src/optim/: SGD.cpp
tests/: Tensor_cpu_test.cpp  benchmark.cpp  dataloader_test.cpp  layer_cpu_test.cpp  loss_optim_test.cpp
